# farewell-assistant

./: .api-key.example.txt  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_9ROUTER.md  CHANGELOG_ECC.md  Modelfile.qwen2-1.5b  Modelfile.qwen2.5-coder-1.5b  Modelfile.qwen3.5-0.8b  Modelfile.qwen3.5-2b  Modelfile.qwen3.5-4b  README.md  api-key.example.txt  audit.md  check_db.py  initial.bat  mcp-config.example.json  opencode.jsonc  opencode.template.jsonc  owner.bat  pyproject.toml  run-tests.ps1  self-improvement.md
.farewell/: 9router-models.json  session-counter.json  team.json
.github/: PULL_REQUEST_TEMPLATE.md
audit-simulations/: 01-service-hub-simulasi.md  02-senatib2026-simulasi.md  03-farewell-ex-simulasi.md  04-crb340-simulasi.md  99-farewell-ex-audit-final.md
commands/: admin.md  autostart.md  daily.md  detect.md  enrich-check.md  go.md  initial.md  llm-setup.md  owner.md  setup-project.md  setup.md  start-free.md  start-go.md  start-project.md  start.md  training.md  workmode.md
data/: registry.json  skill-mode-index.json  skill-whitelist.json
docs/: PROJECT_REGISTRATION_FIX.md  ai-audit-prompt.md  audit.md
farewell_assistant/: INDEX_9ROUTER.md  INDEX_ECC.md  PROJECT_KNOWLEDGE.md  __init__.py  __main__.py  api_client.py  autostart.py  awesome_indexer.py  bootstrap.py  cache_logger.py  cli.py  config.py  cost_tracker.py  daily.py  deepseek_rates.json  detect_project.py  enrichment_pipeline.py  health.py  helpers.py  hermes.py  indexer.py  intent_router.py  llm_setup.py  local_agent.py  log.py  memory.py  models.py  nvidia.py  org.py  requirements.txt  (+11 more)
(+110 files in other folders)
