[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farewell-assistant"
version = "2.0.1"
description = "Intent-driven AI coding assistant orchestrator"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
farewell-assistant = "farewell_assistant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["farewell_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
